hopefully the final version of thesis
Co-Authored-By: iamThoshitha <84404265+iamThoshitha@users.noreply.github.com>
Co-Authored-By: Manjunath-Aero <71602680+Manjunath-Aero@users.noreply.github.com>
Co-Authored-By: DarkHunteress <72258785+DarkHunteress@users.noreply.github.com>

--- a/Thesis/Sections/conclusion.tex
+++ b/Thesis/Sections/conclusion.tex
@@ -4,3 +4,6 @@ The outcome of the project is the lessons we learnt during the project. Communic
 \item Time Management
 \item Prioritize the list that is at hand based on various parameters
 \end{enumerate}
+We were able to learn many libraries that are related to our field in python like SciPy, NumPy amongst others. These are extremely useful when we are conducting numerical analysis and numerical simulations. This gave the foundation for other few libraries that might be useful, like the Qt Library, SQlite3.  
+
+Panda3D was the library that was the most interesting library followed by SciPy, this enabled us to illustrate the ideas we had in our mind through the screen. This gave us much more potential to continue on many more endeavors.
