--- a/Thesis/Sections/introduction.tex
+++ b/Thesis/Sections/introduction.tex
@@ -80,6 +80,7 @@ The main objectives of this project are as follows:
 \item Design and develop a software to learn concepts and  solve Problems related orbital mechanics to understand the basics.
 \item Provide a user friendly learning tool such that the user can operate even with the minimum knowledge about the concepts of orbital mechanics.
 \item Help user to visualize the virtual view of the space mission.
+\item Motivate the new comers to learn more abut the space studies. 
 \end{enumerate}
 \subsection{Front End Development}
 \subsubsection{Introduction}
