--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -13,6 +13,8 @@
 \patchcmd{\@makeschapterhead}{\HUGE}{\large}{}{}
 \makeatother
 
+\usepackage[hidelinks]{hyperref}
+
 \usepackage[top=0.75in, bottom=0.75in, left= 0.75in, right=0.75in]{geometry}
 \usepackage{amsmath}
 \usepackage{enumitem}
@@ -145,9 +147,10 @@
 
 \input{codes/LP}
 
+\input{codes/cosv}
+
 \input{codes/dbms}
 \newpage
-
 
 
 \input{codes/db}
@@ -164,6 +167,8 @@
 	\bibitem{lsoda}{\textit{\enquote{Numerical Solutions to Differential Equations in R}}},{ Nessy Tania, Erica Graham}, {Qubes.}
 	
 	\bibitem{indiaspace}{\textit{\enquote{Preparing to Scale New Heights: Privatisation of India's commercial Space Sector}}},{ Retrieved on 25$^{th}$ May 2021 from PWC},{\href{https://www.pwc.in/research-insights/2020/preparing-to-scale-new-heights.html}{ pwc.in}}
+	
+	\bibitem{}
 	
 	\bibitem{lic}{GNU General Public License version-3},{ Open Source Initiative},{\href{https://opensource.org/licenses/gpl-3.0.html}{ OpenSourceInitiative.org}}
 
