thesis final yay
Co-Authored-By: iamThoshitha <84404265+iamThoshitha@users.noreply.github.com>
Co-Authored-By: Manjunath-Aero <71602680+Manjunath-Aero@users.noreply.github.com>
Co-Authored-By: DarkHunteress <72258785+DarkHunteress@users.noreply.github.com>

--- a/Thesis/codes/cosv.tex
+++ b/Thesis/codes/cosv.tex
@@ -1,4 +1,4 @@
-\subsection{Calculation Of State Vectors}
+\subsection{Calculation Of Relative Position of two Spacecrafts}
 \begin{lstlisting}[language=python, caption=CoSV.py]
 from math import *
 from numpy import *
