--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -168,7 +168,7 @@
 	
 	\bibitem{indiaspace}{\textit{\enquote{Preparing to Scale New Heights: Privatisation of India's commercial Space Sector}}},{ Retrieved on 25$^{th}$ May 2021 from PWC},{\href{https://www.pwc.in/research-insights/2020/preparing-to-scale-new-heights.html}{ pwc.in}}
 	
-	\bibitem{}
+	\bibitem{lp}{ \textit{\enquote{Lagrange Point}}}, { June 23, 2020}, { Retrieved on May 30, 2021 from NASA's Website}, {\href{https://solarsystem.nasa.gov/resources/754/what-is-a-lagrange-point/}{solarsystem.nasa.gov.in}}
 	
 	\bibitem{lic}{GNU General Public License version-3},{ Open Source Initiative},{\href{https://opensource.org/licenses/gpl-3.0.html}{ OpenSourceInitiative.org}}
 
