--- a/Thesis/Sections/details.tex
+++ b/Thesis/Sections/details.tex
@@ -209,7 +209,7 @@ Transfer orbits are:
 slight fuel efficint transfer.
 \begin{figure}[H]
 \includegraphics[scale=0.85]{images/bi.png}
-\caption{Hohmann Transfer}
+\caption{Bi-Elliptical Hohmann Transfer}
 \end{figure}
 \item \textbf{Low Energy Transfer Orbit:} A low energy transfer is a path in space to reach a target with very little consumption of fuel.
 \item \textbf{Constant-Thrust Transfer Orbit:} In this transfer path the spacecraft's engine will be producing constant thrust through out the path. The spacecraft points straight towards the target with constant acceration till it reaches the target. 
